fix: The title of Card should be vertically aligned, close #10576

--- a/components/card/style/index.less
+++ b/components/card/style/index.less
@@ -45,7 +45,8 @@
       white-space: nowrap;
       color: @card-head-color;
       font-weight: 500;
-      display: inline-block;
+      display: flex;
+      align-items: center;
       flex: 1;
     }
 
